conclusion draft & transition paragraphs

--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -90,7 +90,7 @@ As an example, a system might be discriminatory towards certain job-seekers (con
 % what accuracy is? and what word should we replace it with?
 % In machine learning algorithms, achieving optimum accuracy by itself is impossible and might not even be desirable! 
 
-Traditionally, the main goal of a recommender system is personalization. In other words, recommender systems strive to present items to the users that are more likely to be interacted with. And to achieve personalization, these systems utilize users' historical log data and optimize for accuracy. Achieving optimum accuracy by itself is impossible due to reasons such as inconsistency in user rating behavior. Additionally, optimizing for accuracy might reinforce the popularity bias, or some consumer-side unfairness. In the following sections, I discuss the ways in which optimizing for accuracy can lead to user dissatisfaction and the reasons why we might need to balance the goal of accuracy with other goals such as fairness.
+Traditionally, the main goal of a recommender system is personalization. In other words, recommender systems strive to present items to the users that are more likely to be interacted with. To achieve personalization, these systems utilize users' historical log data and optimize for accuracy. Achieving optimum accuracy by itself is impossible due to reasons such as inconsistency in user rating behavior. Additionally, optimizing for accuracy might reinforce the popularity bias, or some consumer-side unfairness. In the following sections, I discuss the ways in which optimizing for accuracy can lead to user dissatisfaction and the reasons why we might need to balance the goal of accuracy with other goals such as fairness.
 %TODO check I versus passive form
 
 % \subsection{Impossibility of Ideal Accuracy}
