--- a/chapter6-ofair.tex
+++ b/chapter6-ofair.tex
@@ -3,15 +3,17 @@
 % subsect:ofair_expp
 % Recommender systems are designed to assist users to find items of interest. Such systems model users' historical behaviors and generate personalized recommendations tailored to users' interests or needs. Recent research has identified a key limitation in a user-focused approach to recommender systems development, namely that it ignores multistakeholder aspects of the systems in which recommendation is embedded\cite{abdollahpourimulti2020}.
 
-\todo[inline]{clean the writing of this section, unclear and messy}
+% \todo[inline]{clean the writing of this section, unclear and messy}
 
-In this section, we focus on the \textit{provider fairness} again where it concerns the impact of recommendation delivery on the providers of items being recommended and the questions of fair treatment that may arise\cite{burke2017multisided}.
+In this section, we focus on group-based fairness where it concerns the impact of recommendation delivery on the providers of items being recommended\cite{burke2017multisided}. We propose a post-processing approach to mitigate fairness while keeping personalization high.
 
 \subsection{Introduction}
 
-Recent research has sought to alleviate provider unfairness, as we have discussed in chapter \ref{ch:fairness}, including the work in this chapter, using a variety of approaches. See, for example, \cite{yao2017beyond,burke2018balanced,ekstrand2018exploring,liu2019personalized,kamishima2016model,beutel2019fairness}. Although, most of these approaches focus on a \emph{single dimension} over which fairness is sought: a single protected group among the providers, and except for \cite{liu2019personalized,sonboli2020opportunistic} which are also explained in this chapter, they do not take user preferences in item features into account. In the following method, we to use user preferences in item features into account which provides a higher level of personalization. The problem of promoting provider fairness while maintaining recommendation accuracy can be generally characterized as a multi-objective optimization problem. If optimal fairness and optimal recommendation accuracy could be achieved simultaneously, there would be no need for research in this area. 
+Recent research has sought to alleviate provider unfairness (discussed in Chapter \ref{ch:fairness}) using a variety of approaches. See, for example, \cite{yao2017beyond,burke2018balanced,ekstrand2018exploring,liu2019personalized,kamishima2016model,beutel2019fairness}. However, most of these approaches focus on a \emph{single dimension} over which fairness is sought: a single protected group among the providers, and except for the approaches \cite{liu2019personalized,sonboli2020opportunistic} (explained Section \ref{sec:ofair} and Section \ref{sec:farpfar}), they do not take user preferences in item features into account. 
 
-As we have discussed in chapter \ref{ch:intro}, optimizing recommendation accuracy often comes at the expense of provider fairness due to various biases present in recommender systems, including popularity bias \cite{celma2008hits,lee2014fairness}, and user-base composition \cite{lin2019crank, yao2017beyond}. Research in provider fairness is therefore generally concerned with improving the trade-off between fairness and accuracy, or in other words, increasing the amount of fairness that can be gained for a given degree of accuracy loss.
+In the following method, we use user preferences in item features, which provides a higher level of personalization. The problem of promoting provider-fairness while maintaining recommendation accuracy can be generally characterized as a multi-objective optimization problem. If optimal fairness and optimal recommendation accuracy could be achieved simultaneously, there would be no need for research in this area. 
+
+Optimizing recommendation accuracy often comes at the expense of provider fairness due to various biases present in recommender systems, including popularity bias \cite{celma2008hits,lee2014fairness}, and user-base composition \cite{lin2019crank, yao2017beyond} discussed in Chapter \ref{ch:intro}. Research in provider fairness is therefore generally concerned with improving the trade-off between fairness and accuracy, or in other words, increasing the amount of fairness that can be gained for a given degree of accuracy loss.
 
 % Rather than look for improvements through global optimization as in \cite{yao2017beyond},
 
@@ -140,7 +142,7 @@ Figure \ref{fig:uniform_vs_personalized_div} gives a schematic depiction of this
 \end{figure}
 
 % \todo[inline]{we extended the entropy concept in here to feature-based one while having the general concept in the methodology section, is that fine?}
-In the previous section and in chapter \ref{chap:methodology}, we introduced the concept of recommendation re-ranking using a quantity $\tau_u$, a user-specific measure of interest in diversity, based on information entropy \cite{liu2018personalizing,liu2019personalized}. Here we extend this definition to take into account multiple item features while seeking fairness within each feature's dimensions. Instead of a single user-specific $\tau_u$, the $\vec{\tau}_u$ vector will represent the user's level of tolerance for diversity across the feature space (such as the user in the above example having more tolerance for diversity in the ``color'' feature and less in the ``shape'' feature). Specifically,
+In the previous section and in Chapter \ref{ch:methodology}, we introduced the concept of recommendation re-ranking using a quantity $\tau_u$, a user-specific measure of interest in diversity, based on information entropy \cite{liu2018personalizing,liu2019personalized}. Here we extend this definition to take into account multiple item features while seeking fairness within each feature's dimensions. Instead of a single user-specific $\tau_u$, the $\vec{\tau}_u$ vector will represent the user's level of tolerance for diversity across the feature space (such as the user in the above example having more tolerance for diversity in the ``color'' feature and less in the ``shape'' feature). Specifically,
 
 \begin{equation}
 \vec{\tau}_u(F_{j})\buildrel\triangle\over=-\sum_{f \in F_j} P(f|u)\log P(f|u),
@@ -183,7 +185,7 @@ Effectively, the algorithm, at each point, finds the next item to include by inc
 \noindent where $x_v$ represents the set of aspects present in item $v$. In effect, this algorithm boosts the rank of items that bring in new aspects -- features that have not yet appeared in the list when added to the list so far. 
 
 % \todo[inline]{which section?}
-In FAR/PFAR algorithms in the Subsection \ref{subsec:far_algorithm} \cite{liu2018personalizing,liu2019personalized}, we proposed two extensions to xQuAD. The first \textit{FAR} (Fairness-Aware Reranking) applied the formalism using aspects of an item defined over a fairness-relevant feature. In this configuration, the algorithm boosts the scores of items from protected groups when no such item has yet been added to the list. Once the group is represented, the boosting disappears. This can be seen as an implementation of the ``Rooney rule'' \cite{kleinberg2018selection} that ensures minimum representation for protected groups. The second variant \textit{PFAR} adds personalization to this process. Using the $\tau_u$ information entropy measure described above, the fairness-boosting term is modulated so that users with more diverse profiles (who have a high diversity tolerance/higher entropy) are presented with results containing more fairness-enhancing diversity.
+In FAR/PFAR algorithms in the Section \ref{sec:farpfar} \cite{liu2018personalizing,liu2019personalized}, we proposed two extensions to xQuAD. The first \textit{FAR} (Fairness-Aware Reranking) applied the formalism using aspects of an item defined over a fairness-relevant feature. In this configuration, the algorithm boosts the scores of items from protected groups when no such item has yet been added to the list. Once the group is represented, the boosting disappears. This can be seen as an implementation of the ``Rooney rule'' \cite{kleinberg2018selection} that ensures minimum representation for protected groups. The second variant \textit{PFAR} adds personalization to this process. Using the $\tau_u$ information entropy measure described above, the fairness-boosting term is modulated so that users with more diverse profiles (who have a high diversity tolerance/higher entropy) are presented with results containing more fairness-enhancing diversity.
 
 In particular, the scoring function of PFAR is composed of a personalization score $\mathit{rec}(v,u)$ and a personalized fairness score. PFAR simply assumes only one sensitive feature needs to be considered. Suppose the given sensitive feature dimension is $F_a$, then the scoring function is defined by
 
@@ -387,7 +389,7 @@ In Figure \ref{fig:kiva_category_heatmap} and \ref{fig:ML_category_heatmap}, we 
 \subsection{Related Work}
 \label{subsec:ofair_related_work}
 
-In examining prior work on re-ranking, it is important to note the distinction introduced in Sub-section~\ref{subsec:ofair_backgroundd} above between user-oriented results diversification and fairness/provider-oriented re-ranking, which is the objective of our work. A user-oriented method will measure success by the diversity of individual lists, whereas a provider fairness approach will be measuring outcomes for providers, especially protected ones.
+In examining prior work on re-ranking, it is important to note the distinction (introduced in Subsection~\ref{subsec:ofair_backgroundd}) between user-oriented results diversification and fairness/provider-oriented re-ranking, which is the objective of our work. A user-oriented method will measure success by the diversity of individual lists, whereas a provider fairness approach will be measuring outcomes for providers, especially protected ones.
 
 One of the first efforts to increase diversity in recommendations was \cite{Ziegler:2005:IRL:1060745.1060754}, which used a taxonomic content-based similarity metric to re-rank recommendation lists. This method did not attempt to personalize its ranking goal relative to different users. The taxonomic item similarity measure used in this work may be appropriate to adapt to OFAiR, which currently uses a one-dimensional representation of item features. A steady stream of user-oriented diversification research followed, as summarized in \cite{kunaver2017diversity}.
 
@@ -406,10 +408,14 @@ We show that the combination of personalized, feature-specific, weights together
 
 % One of the challenges in this work is the lack of proper datasets that have user features and these datasets are specifically lacking in domains where fairness matters. Due to this issue, we chose the Movies dataset to show the capabilities of our method.
 
-As our future work in this section, we plan to run more thorough experimentation with weights of the weighted cosine similarity and capture the influence of these weights on the final results. We also intend to use different recommendation algorithms as the base recommendation. A more general method to use is the metric learning approach that assumes different dimensions and assigns weights to these dimensions accordingly. This is useful as it automatically assigns weights to dimensions not manually.
-The other approach to explore is to use voting methods in the fair resource allocation literature in the computational social choice field. Specifically, the cake-cutting problem, where we want to allocate cake slices fairly where we assume users have different preferences for different layers of the cake, which is similar to our research problem here, where users have different preferences over different dimensions.
+% As our future work in this section, we plan to run more thorough experimentation with weights of the weighted cosine similarity and capture the influence of these weights on the final results. We also intend to use different recommendation algorithms as the base recommendation. A more general method to use is the metric learning approach that assumes different dimensions and assigns weights to these dimensions accordingly. This is useful as it automatically assigns weights to dimensions not manually.
+% The other approach to explore is to use voting methods in the fair resource allocation literature in the computational social choice field. Specifically, the cake-cutting problem, where we want to allocate cake slices fairly where we assume users have different preferences for different layers of the cake, which is similar to our research problem here, where users have different preferences over different dimensions.
 
 % The results of this experimentation is intended to be submitted to the ACM FAcct 2021 conference.
-
-In our next work, we intend to explore further the idea of ``opportunity'' in the subgroup-fairness-aware recommendation. In particular, when recommendations are delivered over time, prior outcomes relative to different protected groups may dictate what opportunities should be most salient at any given moment. 
 % We intend to publish this work later this year in The ACM Series on Recommender Systems.
+
+
+
+Finally, we note that, in real-world recommendation applications, managing the trade-off between accuracy and coverage of provider groups is not a single-shot process. Instead, it is an online process, where a current lack of coverage can be compensated for later and where results are evaluated temporally. This would require making the algorithm sensitive to historical patterns of coverage, rather than just the results obtained in the current list. In our next work in Section \ref{sec:dynamicfair}, we also intend to explore further the idea of ``opportunity'' in the subgroup-fairness-aware recommendation. In particular, when recommendations are delivered over time, prior outcomes relative to different protected groups may dictate what opportunities should be most salient at any given moment. 
+
+% We intend to explore this type of algorithm design and evaluation in our future work.
